@@ -42,6 +42,9 @@ version 2.13.0 (??/??/????):
 	Finch:
 	* Fix handling of search results (#17238 David Woodhouse)
 
+	Voice & Video:
+	* Port backend-fs to newer api for farstream relay-info property  (#17274 bellet)
+
 version 2.12.0 (03/09/2017):
 	libpurple:
 	* Fix an out of bounds memory write in purple_markup_unescape_entity.
